Moves index.html and index.css to root directory for preview on Github Pages

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 </head>
 <body>
   <div style="display:none">
-    <img id="map" src="../assets/map/MonolithMap_wide.png">
-    <img id="fire-tower" src="../assets/towers/fire_tower.png">
-    <img id="water-tower" src="../assets/towers/water_tower.png">
-    <img id="earth-tower" src="../assets/towers/earth_tower.png">
-    <img id="boulder" src="../assets/artillery/boulder.png">
-    <img id="droplet" src="../assets/artillery/droplet.png">
-    <img id="flame" src="../assets/artillery/flame.png">
-    <img id="caveman" src="../assets/npcs/Caveman.png">
-    <img id="spider" src="../assets/npcs/Spider.png">
-    <img id="eagle" src="../assets/npcs/Eagle.png">
-    <img id="mammoth" src="../assets/npcs/Mammoth.png">
+    <img id="map" src="./assets/map/MonolithMap_wide.png">
+    <img id="fire-tower" src="./assets/towers/fire_tower.png">
+    <img id="water-tower" src="./assets/towers/water_tower.png">
+    <img id="earth-tower" src="./assets/towers/earth_tower.png">
+    <img id="boulder" src="./assets/artillery/boulder.png">
+    <img id="droplet" src="./assets/artillery/droplet.png">
+    <img id="flame" src="./assets/artillery/flame.png">
+    <img id="caveman" src="./assets/npcs/Caveman.png">
+    <img id="spider" src="./assets/npcs/Spider.png">
+    <img id="eagle" src="./assets/npcs/Eagle.png">
+    <img id="mammoth" src="./assets/npcs/Mammoth.png">
   </div>
 
   <div id="selected-tower-container">
@@ -27,20 +27,20 @@
     <h1>Monolith</h1>
   </div>  
   <div id="monolith-game">
-    <canvas class="monolith-canvas" id="monolith-canvas" width="1500" height="1050"  style="background: no-repeat url(../assets/map/MonolithMap_wide.png)"></canvas>
+    <canvas class="monolith-canvas" id="monolith-canvas" width="1500" height="1050"  style="background: no-repeat url(./assets/map/MonolithMap_wide.png)"></canvas>
     <div class="control-panel">
       <div class="wave-counter" id="wave-counter"></div>
       <div class="towers-pane" id="towers-pane">
         <div class="tower-container" id="earth">
-          <img id="earth-tower" src="../assets/towers/earth_tower.png">
+          <img id="earth-tower" src="./assets/towers/earth_tower.png">
           <span class="tower-price earth-tower-price" id="earth-tower-price"></span>
         </div>
         <div class="tower-container" id="water">
-          <img id="water-tower" src="../assets/towers/water_tower.png">
+          <img id="water-tower" src="./assets/towers/water_tower.png">
           <span class="tower-price water-tower-price" id="water-tower-price"></span>
         </div>
         <div class="tower-container" id="fire">
-          <img id="fire-tower" src="../assets/towers/fire_tower.png">
+          <img id="fire-tower" src="./assets/towers/fire_tower.png">
           <span class="tower-price fire-tower-price" id="fire-tower-price"></span>
         </div>
       </div>
@@ -52,6 +52,6 @@
     </div>
   </div>
 
-  <script type="application/javascript" src="./main.js"></script>
+  <script type="application/javascript" src="./dist/main.js"></script>
 </body>
 </html>
