--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
     <img id="mammoth" src="./assets/npcs/Mammoth.png">
   </div>
 
+  <div class="instructions-window-hide" id="instructions-window">
+    <div class="x-button" id="x-button">&times;</div>
+    <div class="background-window-hide" id="background-window">
+      <p>
+        The year is 9,000 BC. Your people have recently uncovered a mysterious ancient monolith. Perhaps it was fate, or maybe just luck. Within hours of handling the monolith, your people have experienced intense visions, sudden bouts of insight, and waves of unfathomable knowledge. 
+      </p>
+      <p>
+          As time has passed, neighboring settlements' jealousy and skepticism grows with every report about the alleged power of the monolith. Your neighbors' collective response is to band together and take the monolith for themselves, or destroy it in the process. 
+      </p>
+      <p>
+          It is up to you to protect the monolith! Use your new found wisdom to build towers to defend the monolith, your people, and perhaps the world!
+      </p>
+    </div>
+  </div>
+
   <div id="selected-tower-container">
     <img id="selected-tower-img">
   </div>
@@ -50,9 +65,14 @@
         <div class="wave-button" id="wave-button">Attack!</div>
         <div class="messages" id="messages"></div>
       </div>
+      <div class="instructions-controls" id="instructions-controls">
+        <div class="background-button" id="background-button">Background</div>
+        <div class="instructions-button" id="instructions-button">How To Play</div>
+      </div>
     </div>
   </div>
 
   <script type="application/javascript" src="./dist/main.js"></script>
+  <script type="application/javascript" src="./src/instructions/story.js"></script>
 </body>
 </html>
