Adds some instructional text to index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,49 @@
           It is up to you to protect the monolith! Use your new found wisdom to build towers to defend the monolith, your people, and perhaps the world!
       </p>
     </div>
+    <div class="htp-1-window-hide" id="htp-1-window">
+      <p>
+        Your job is to protect the monolith!
+      </p>
+    </div>
+    <div class="htp-2-window-hide" id="htp-2-window">
+      <p>
+        This is the monolith.
+      </p>
+    </div>
+    <div class="htp-3-window-hide" id="htp-3-window">
+      <p>
+        This is the monolith's health bar.
+      </p>
+    </div>
+    <div class="htp-4-window-hide" id="htp-4-window">
+      <p>
+        Enemies come from these four paths.
+      </p>
+    </div>
+    <div class="htp-4-arrows-hide" id="htp-4-arrows">
+      <div class="arrow-1">&rarr;</div>
+      <div class="arrow-2">&nearr;</div>
+      <div class="arrow-3">&nearr;</div>
+      <div class="arrow-4">&nwarr;</div>
+    </div>
+    <div class="htp-5-window-hide" id="htp-5-window">
+      <p>
+        These are your towers! Towers will target and damage enemies within its range.
+      </p>
+      <p>
+        Each tower has its own srengths and weaknesses. Experiment!
+      </p>
+    </div>
+    <div class="htp-6-window-hide" id="htp-6-window">
+      <p>
+        To place towers you must have enough flint. Click to select a tower, then click on the map to place and purchase the
+        tower, or outside the map to cancel.
+      </p>
+      <p>
+        Protect the monolith by placing towers strategically around the map! If the monolith runs out of health, you lose!
+      </p>
+    </div>
   </div>
 
   <div id="selected-tower-container">
