--- a/index.html
+++ b/index.html
@@ -35,31 +35,29 @@
     </div>
     <div class="htp-1-window-hide" id="htp-1-window">
       <p>
-        Your job is to protect the monolith!
+        This is the monolith.
+      </p>
+      <p>
+        It is up to you to protect it!
       </p>
     </div>
     <div class="htp-2-window-hide" id="htp-2-window">
       <p>
-        This is the monolith.
+        This is the monolith's health bar.
       </p>
     </div>
     <div class="htp-3-window-hide" id="htp-3-window">
       <p>
-        This is the monolith's health bar.
-      </p>
-    </div>
-    <div class="htp-4-window-hide" id="htp-4-window">
-      <p>
         Enemies come from these four paths.
       </p>
     </div>
-    <div class="htp-4-arrows-hide" id="htp-4-arrows">
+    <div class="htp-3-arrows-hide" id="htp-3-arrows">
       <div class="arrow-1" id="arrow-1">&rarr;</div>
       <div class="arrow-2" id="arrow-2">&nearr;</div>
       <div class="arrow-3" id="arrow-3">&nearr;</div>
       <div class="arrow-4" id="arrow-4">&nwarr;</div>
     </div>
-    <div class="htp-5-window-hide" id="htp-5-window">
+    <div class="htp-4-window-hide" id="htp-4-window">
       <p>
         These are your towers! Towers will target and damage enemies within its range.
       </p>
@@ -67,7 +65,7 @@
         Each tower has its own srengths and weaknesses. Experiment!
       </p>
     </div>
-    <div class="htp-6-window-hide" id="htp-6-window">
+    <div class="htp-5-window-hide" id="htp-5-window">
       <p>
         To place towers you must have enough flint. Click to select a tower, then click on the map to place and purchase the
         tower, or click outside the map to cancel.
@@ -111,12 +109,12 @@
       </div>
       <div class="instructions-controls" id="instructions-controls">
         <div class="background-button" id="background-button">Background</div>
-        <div class="instructions-button" id="instructions-button">How To Play</div>
+        <div class="htp-button" id="htp-button">How To Play</div>
       </div>
     </div>
   </div>
 
   <script type="application/javascript" src="./dist/main.js"></script>
-  <script type="application/javascript" src="./src/instructions/instructions.js"></script>
+  <!-- <script type="application/javascript" src="./src/instructions/instructions.js"></script> -->
 </body>
 </html>
