Adds a how to play animation

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </div>
 
   <div class="instructions-window-hide" id="instructions-window">
-    <div class="x-button-hide" id="x-button">&times;</div>
-    <div class="background-window-hide" id="background-window">
+    <div class="x-button" id="x-button">&times;</div>
+    <div class="background-window" id="background-window">
       <p>
         The year is 9,000 BC. Your people have recently uncovered a mysterious ancient monolith. Perhaps it was fate, or maybe just luck. Within hours of handling the monolith, your people have experienced intense visions, sudden bouts of insight, and waves of unfathomable knowledge. 
       </p>
@@ -33,48 +33,6 @@
           It is up to you to protect the monolith! Use your new found wisdom to build towers to defend the monolith, your people, and perhaps the world!
       </p>
     </div>
-    <div class="htp-1-window-hide" id="htp-1-window">
-      <p>
-        This is the monolith.
-      </p>
-      <p>
-        It is up to you to protect it!
-      </p>
-    </div>
-    <div class="htp-2-window-hide" id="htp-2-window">
-      <p>
-        This is the monolith's health bar.
-      </p>
-    </div>
-    <div class="htp-3-window-hide" id="htp-3-window">
-      <p>
-        Enemies come from these four paths.
-      </p>
-    </div>
-    <div class="htp-3-arrows-hide" id="htp-3-arrows">
-      <div class="arrow-1" id="arrow-1">&rarr;</div>
-      <div class="arrow-2" id="arrow-2">&nearr;</div>
-      <div class="arrow-3" id="arrow-3">&nearr;</div>
-      <div class="arrow-4" id="arrow-4">&nwarr;</div>
-    </div>
-    <div class="htp-4-window-hide" id="htp-4-window">
-      <p>
-        These are your towers! Towers will target and damage enemies within its range.
-      </p>
-      <p>
-        Each tower has its own srengths and weaknesses. Experiment!
-      </p>
-    </div>
-    <div class="htp-5-window-hide" id="htp-5-window">
-      <p>
-        To place towers you must have enough flint. Click to select a tower, then click on the map to place and purchase the
-        tower, or click outside the map to cancel.
-      </p>
-      <p>
-        Protect the monolith by placing towers strategically around the map! If the monolith runs out of health, you lose!
-      </p>
-    </div>
-    <div class="next-button-hide" id="next-button"></div>
   </div>
 
   <div id="selected-tower-container">
@@ -115,6 +73,6 @@
   </div>
 
   <script type="application/javascript" src="./dist/main.js"></script>
-  <!-- <script type="application/javascript" src="./src/instructions/instructions.js"></script> -->
+  <script type="application/javascript" src="./src/instructions/instructions.js"></script>
 </body>
 </html>
