Adds cleaner styling to the story modal

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <div class="messages" id="messages"></div>
       </div>
       <div class="instructions-controls" id="instructions-controls">
-        <div class="background-button" id="background-button">Background</div>
+        <div class="story-button" id="story-button">Story</div>
         <div class="htp-button" id="htp-button">How To Play</div>
       </div>
     </div>
   </div>
 
   <script type="application/javascript" src="./dist/main.js"></script>
-  <script type="application/javascript" src="./src/instructions/instructions.js"></script>
+  <script type="application/javascript" src="./src/instructions/story.js"></script>
 </body>
 </html>
