Fixes semantic issue between story and background

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="instructions-window-hide" id="instructions-window">
     <div class="x-button" id="x-button">&times;</div>
-    <div class="background-window" id="background-window">
+    <div class="story-window" id="story-window">
       <p>
         The year is 9,000 BC. Your people have recently uncovered a mysterious ancient monolith. Perhaps it was fate, or maybe just luck. Within hours of handling the monolith, your people have experienced intense visions, sudden bouts of insight, and waves of unfathomable knowledge. 
       </p>
