Decreased the sprite size of placed towers

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
   </div>
 
-  <div id="selected-tower-container">
-    <img id="selected-tower-img">
+  <div class="selected-tower-container" id="selected-tower-container">
+    <img class="selected-tower-img" id="selected-tower-img" src="">
   </div>
 
   <div class="title-container">
