Adds a flint image to the UI

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <div style="display:none">
     <img id="map" src="./assets/map/MonolithMap_wide.png">
+    <img id="flint" src="./assets/flint/Flint.png">
     <img id="fire-tower" src="./assets/towers/fire_tower.png">
     <img id="water-tower" src="./assets/towers/water_tower.png">
     <img id="earth-tower" src="./assets/towers/earth_tower.png">
