Adds a bit of code for refactoring ui to the canvas

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
     <img class="selected-tower-img" id="selected-tower-img" src="">
   </div>
 
-  <div class="title-container">
+  <!-- <div class="title-container">
     <h1>Monolith</h1>
-  </div>  
+  </div>   -->
   <div id="monolith-game">
-    <canvas class="monolith-canvas" id="monolith-canvas" width="1500" height="1050"  style="background: no-repeat url(./assets/map/MonolithMap_wide.png)"></canvas>
+    <!-- <canvas class="monolith-canvas" id="monolith-canvas" width="1500" height="1050" style="background: no-repeat url(./assets/map/MonolithMap_wide.png)"></canvas> -->
+    <canvas class="monolith-canvas" id="monolith-canvas" width="1850" height="1200"></canvas>
     <div class="control-panel">
       <div>
         <h3 class="wave-counter" id="wave-counter"></h3>
