--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <!-- <canvas class="monolith-canvas" id="monolith-canvas" width="1500" height="1050" style="background: no-repeat url(./assets/map/MonolithMap_wide.png)"></canvas> -->
     <canvas class="monolith-canvas-ui" id="monolith-canvas-ui" width="1850" height="1200" style="z-index: 3"></canvas>
     <canvas class="monolith-canvas-game" id="monolith-canvas-game" width="1850" height="1200" style="z-index: 2"></canvas>
-    <div class="monolith-background" id="monolith-canvas-background"></div>
-    <div class="control-panel">
+    <div class="monolith-background" id="monolith-background"></div>
+    <!-- <div class="control-panel">
       <div>
         <h3 class="wave-counter" id="wave-counter"></h3>
         <div class="towers-pane" id="towers-pane">
@@ -75,7 +75,7 @@
         <div class="story-button" id="story-button">Story</div>
         <div class="htp-button" id="htp-button">How To Play</div>
       </div>
-    </div>
+    </div> -->
   </div>
   
   <script type="application/javascript" src="./dist/main.js"></script>
