Adds Font Awesome and my credits

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link id="css" rel="stylesheet" type="text/css" href="index.css">
+  <link id="css" rel="stylesheet" type="text/css" href="./assets/fa_icons/all.css">
   <title>Monolith</title>
 </head>
 
@@ -36,14 +37,18 @@
     </div>
   </div>
 
-  <div class="selected-tower-container" id="selected-tower-container">
-    <img class="selected-tower-img" id="selected-tower-img" src="">
-  </div>
-
   <div id="monolith-game">
     <canvas class="monolith-canvas-ui" id="monolith-canvas-ui" width="1850" height="1200" style="z-index: 3"></canvas>
     <canvas class="monolith-canvas-game" id="monolith-canvas-game" width="1850" height="1200" style="z-index: 2"></canvas>
     <div class="monolith-background" id="monolith-background"></div>
+    <div class="personal-links" id="personal-links">
+      <p>
+        <span>Created By:</span>
+        <span>Gordy Cooper</span>
+      </p>
+      <a href="https://github.com/gcoooop"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/gordon-cooper-iii"><i class="fab fa-linkedin"></i></a>
+    </div>
   </div>
   
   <script type="application/javascript" src="./dist/main.js"></script>
