Adds a losing screen and a button to retry

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       <a href="https://github.com/gcoooop"><i class="fab fa-github"></i></a>
       <a href="https://www.linkedin.com/in/gordon-cooper-iii"><i class="fab fa-linkedin"></i></a>
     </div>
+    <div class="retry-button-container-hide" id="retry-button-container">
+      <button class="retry-button" id="retry-button" onClick="window.location.reload();">Retry?</button>
+    </div>
   </div>
   
   <script type="application/javascript" src="./dist/main.js"></script>
